2003-05-12  Duarte Loreto <happyguy_pt@hotmail.com>

        * pt.po: Updated Portuguese translation.

2003-05-11  Christophe Merlet  <redfox@redfoxcenter.org>

	* fr.po: Updated French translation.

2003-05-09  Paul Duffy <dubhthach@frink.nuigalway.ie>                                                                                
        * ga.po: Updated Irish translation.
										
2003-05-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.1

2003-05-06  Takeshi AIHANA <aihana@gnome.gr.jp>

	* ja.po: Updated Japanese translation.

2003-05-05  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* be.po: Updated Belarusian translation
	from Belarusian team <i18n@mova.org>.

2003-05-03  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-05-03  Changwoo Ryu  <cwryu@debian.org>

	* ko.po: Updated Korean translation.

2003-05-02  Paul Duffy <dubhthach@frink.nuigalway.ie>

        * ga.po: Updated Irish translation.

2003-05-01  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2004-03-30  Paul Duffy <dubhthach@frink.nuigalway.ie>

        * ga.po: Updated Irish translation


2003-04-30  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

2003-04-29  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Add missing files.
	* no.po: Update this.

2003-04-29  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.


2004-03-29  Paul Duffy <dubhthach@frink.nuigalway.ie>

        * ga.po:  Updated Irish translation
	
2003-03-21  Guntupalli Karunakar  <karunakar@freedomink.org>

	* ml.po: Added Malayalam translation by
	FSF-India <locale@gnu.org.in>

2003-03-18  Metin Amiroff  <metin@karegen.com>

	* az.po: Updated Azerbaijani translation.

2003-03-10  Roozbeh Pourander  <roozbeh@sharif.edu>

	* fa.po: Added Persian translation.

2003-02-22  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Added Albanian translation
	by Elian Myftiu <elian@lycos.com>
	