@@ -8,8 +8,8 @@ capplets/background/background-properties-capplet.c
 capplets/background/background-properties.glade
 capplets/background/background.desktop.in
 capplets/common/activate-settings-daemon.c
-capplets/common/capplet-util.c
 capplets/common/capplet-stock-icons.c
+capplets/common/capplet-util.c
 capplets/common/file-transfer-dialog.c
 capplets/common/gconf-property-editor.c
 capplets/default-applications/default-applications.desktop.in
@@ -62,13 +62,13 @@ capplets/sound/sound-properties.glade
 capplets/sound/sound.desktop.in
 capplets/theme-switcher/control/GNOME_Theme_Preview.server.in
 capplets/theme-switcher/control/control.c
-capplets/theme-switcher/gtk-theme-selector.desktop.in
-capplets/theme-switcher/theme-properties.glade
-capplets/theme-switcher/theme-install.glade
-capplets/theme-switcher/theme-switcher.c
 capplets/theme-switcher/gnome-theme-details.c
-capplets/theme-switcher/gnome-theme-save.c
 capplets/theme-switcher/gnome-theme-manager.c
+capplets/theme-switcher/gnome-theme-save.c
+capplets/theme-switcher/gtk-theme-selector.desktop.in
+capplets/theme-switcher/theme-install.glade
+capplets/theme-switcher/theme-properties.glade
+capplets/theme-switcher/theme-switcher.c
 capplets/ui-properties/behavior.desktop.in
 capplets/ui-properties/behavior.desktop.in.in
 capplets/ui-properties/gnome-ui-properties.c
@@ -88,6 +88,7 @@ gnome-settings-daemon/gnome-settings-font.c
 gnome-settings-daemon/gnome-settings-keybindings.c
 gnome-settings-daemon/gnome-settings-screensaver.c
 gnome-settings-daemon/gnome-settings-sound.c
+gnome-settings-daemon/gnome-settings-xrdb.c
 gnome-settings-daemon/gnome-settings-xsettings.c
 libbackground/applier.c
 libbackground/preferences.c
@@ -98,3 +99,8 @@ libwindow-settings/metacity-window-manager.c
 schemas/apps_gnome_settings_daemon_default_editor.schemas.in
 schemas/apps_gnome_settings_daemon_screensaver.schemas.in
 schemas/desktop_gnome_font_rendering.schemas.in
+vfs-methods/themus/Themus_Component.server.in.in
+vfs-methods/themus/Themus_Properties_View.server.in.in
+vfs-methods/themus/theme-method.c
+vfs-methods/themus/themus-properties-view.c
+vfs-methods/themus/themus.schemas.in
